# temporal-call-center-ui

./: README.md  app.py  pyproject.toml
static/: main.js
templates/: add_agent.html  base.html  dashboard.html
yaml/certificates/: certificate.yaml
yaml/deployments/: ui-deployment.yaml
yaml/ingress/: ingressroute.yaml  ingressroute_http.yaml
yaml/secrets/: tls-secret.yaml  twilio-secret.yaml
yaml/services/: ui-service.yaml
