[tool.poetry]
name = "call-center-ui"
version = "0.1.0"
description = "Call Center Dashboard Application"
authors = ["Keith Tenzer"]

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^2.2.3"}
twilio = "^8.9.1"
python-dotenv = "0.14.0"
temporalio = "^1.3.0"

[tool.poetry.group.encryption]
optional = true
dependencies = { cryptography = "^38.0.1", aiohttp = "^3.8.1" }

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
temporalio = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
